Fixing item controller
