# app/Http/Controllers/ItemController.php
@@ -2,7 +2,9 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\Image;
 use App\Models\Item;
+use App\Models\Product;
 use Illuminate\Http\Request;
 
 class ItemController extends Controller
@@ -35,6 +37,53 @@ class ItemController extends Controller
      */
     public function store(Request $request)
     {
+        $request->validate([
+            'item.supplier_id' => 'required|integer',
+            'item.name' => 'required|string',
+            'item.price' => 'required|numeric',
+            'item.quantityAvailable' => 'required|integer',
+            'item.description' => 'required|string',
+            'item.bundle' => 'required|boolean',
+        ]);
+
+        $item = Item::create([
+            'supplier_id' => $request->input('item.supplier_id'),
+            'name' => $request->input('item.name'),
+            'price' => $request->input('item.price'),
+            'stock' => $request->input('item.quantityAvailable'),
+            'description' => $request->input('item.description'),
+            'active' => 'true',
+            'is_bundle' => $request->input('item.bundle'),
+        ]);
+        
+        // Não sei se está certo
+        if($request->has('item.tags')){
+            $tags = $request->input('item.tags');
+            $item->tags = $tags;
+        }
+
+        if($request->input('item.bundle') == false){
+        
+            $product = Product::create([
+                'type' => $request->input('item.type')
+            ]);
+
+        
+            if($request->has('item.images')){
+                $paths = [];
+                foreach($request->file('imageFile') as $image)
+                {
+                    $path = $image->store('/public/images'); 
+                    array_push($paths, $path);
+    
+                    Image::create([
+                        'path' => $path
+                    ]);
+    
+                }
+                $product->images = $paths;
+            }
+        }
         
     }
 
@@ -73,7 +122,6 @@ class ItemController extends Controller
             'item.description' => 'string',
             'item.quantityAvailable' => 'integer',
             'item.price' => 'numeric',
-            'item.unit' => 'string'
         ]);
 
         if(!is_numeric($id)){
@@ -97,10 +145,6 @@ class ItemController extends Controller
 
         if($request->has('item.price')){
             $item_data->price = $request->input('item.price'); 
-        }
-
-        if($request->has('item.unit')){
-            $item_data->unit = $request->input('item.unit'); 
         }
 
         $item_data->save();
